
New Features in Taskwarrior 2.6.0

  - The 'QUARTER' virutal tag was added.

New Commands in Taskwarrior 2.6.0

  - The 'purge' command was introduced.

New Configuration Options in Taskwarrior 2.6.0

  - 

Newly Deprecated Features in Taskwarrior 2.6.0

  - The 'DUETODAY' virtual tag is a synonym for the 'TODAY' virtual tag, and is
    not needed.
  - The 'new-uuid' verbosity option is to be removed due to being redundant, its
    functionality will be merged with 'new-id' option.
  - The use of alternate Boolean configuration settings is deprecated. Use values
    "0" for off, and "1" for on.  Avoid used of "on", "off", "true", "t",
    "false", "f", "yes", "y", "no", "n".

Removed Features in 2.6.0

  - Removed 'alias._query' default configuration.

Known Issues

  - https://bug.tasktools.org/

Taskwarrior has been built and tested on the following configurations:

  * OS X
  * Fedora
  * Ubuntu
  * Debian
  * Arch
  * FreeBSD
  * Cygwin

---

While Taskwarrior has undergone testing, bugs are sure to remain.  If you
encounter a bug, please enter a new issue at:

  https://bug.tasktools.org

Or just send a message to:

  support@taskwarrior.org

Thank you.